@@ -1,6 +1,7 @@
 <b>Version 1.20 Beta 2:</b><br/><br/>
     &#8226; Real URL's on profiles<br/>
     &#8226; Fixed 7 in tablet mode<br/>
+    &#8226; Custom notification sound<br/>
     &#8226; Attempted some fixes for uploading large images<br/>
     &#8226; More jumping fixes on the timeline<br/>
 <br/><br/>
